# rust-axum-starter-kit

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: main.rs
src/background/: README.md  mod.rs  scheduler.rs
src/background/jobs/: audit_job.rs  email_job.rs  mod.rs
src/bootstrap/: README.md  app.rs  mod.rs  router.rs  state.rs
src/common/: README.md  mod.rs
src/common/errors/: mod.rs
src/common/extractors/: auth_user.rs  mod.rs  validated_json.rs
src/common/middlewares/: cors.rs  mod.rs  request_id.rs
src/common/responses/: api_response.rs
src/common/traits/: mod.rs  repository.rs  service.rs
src/common/utils/: hash.rs  jwt.rs  mod.rs  pagination.rs
src/configs/: README.md  app_config.rs  database.rs  jwt.rs  mod.rs  redis.rs
src/docs/: README.md
src/migrations/: README.md
src/modules/: README.md
src/modules/auth/application/: auth_service.rs  dto.rs  mod.rs
src/modules/auth/domain/model/: mod.rs
src/modules/auth/domain/repository/: mod.rs
src/modules/auth/presentation/: handlers.rs  routes.rs
src/modules/users/: mod.rs
src/modules/users/application/: dto.rs  mod.rs  user_service.rs
src/modules/users/domain/model/: mod.rs
src/modules/users/domain/repository/: mod.rs
src/modules/users/presentation/: handlers.rs  routes.rs
src/observability/: README.md  metrics.rs  mod.rs  tracing.rs
src/tests/: README.md  mod.rs
